--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "90a4db8d-a042-44ed-af16-fb847fa05318"
 authors = ["Jamie Mair <jamie.mair@hotmail.co.uk> and contributors"]
 version = "0.1.0"
 
+[deps]
+Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+
 [compat]
 julia = "1"
 
