--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "TPS"
 uuid = "90a4db8d-a042-44ed-af16-fb847fa05318"
-authors = ["Jamie Mair <jamie.mair@hotmail.co.uk> and contributors"]
+authors = ["Jamie Mair <jamie.mair@noreply.github.com> and contributors"]
 version = "0.1.0"
 
 [compat]
