--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.3"
 [deps]
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
