--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,14 @@
 name = "TransitionPathSampling"
 uuid = "90a4db8d-a042-44ed-af16-fb847fa05318"
 authors = ["Jamie Mair <jamie.mair@noreply.github.com> and contributors"]
-version = "0.2"
+version = "0.2.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
