Updated CI workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,11 +11,11 @@ jobs:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         version:
-          - '1.8'
-          - 'nightly'
+          - stable
+          - lts
         os:
           - ubuntu-latest
           - macOS-latest
